# STM32FPUTest

./: .cproject  .gitmodules  .mxproject  .project  CMakeLists.txt  F401CCEnableFPU-DSP.ioc  F401CCEnableFPU-DSP.xml  README.md  README_ZH.md  st_nucleo_f4.cfg
Core/Inc/: main.h  use_dwt.h
Core/Src/: main.c  use_dwt.c
Drivers/: CMakeLists.txt
